Write serialized objects at test-time in BadSerializationTest